--- a/Documents/e-kayseri/package.json
+++ b/Documents/e-kayseri/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~11.2.10",
     "@angular/platform-browser-dynamic": "~11.2.10",
     "@angular/router": "~11.2.10",
+    "aws-amplify": "^4.2.3",
     "firebase": "^8.7.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
