[Admin_panel] Implemented Admin Panel Functionality and connected data flow with BE

--- a/Documents/e-kayseri/package.json
+++ b/Documents/e-kayseri/package.json
@@ -25,6 +25,7 @@
     "aws-amplify": "^4.2.3",
     "firebase": "^8.7.1",
     "rxjs": "~6.6.0",
+    "subsink": "^1.0.2",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
